<resources>
    <string name="open">打开</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="app_name">feedly</string>
    <string name="appwidget_feedId">replace me</string>
    <string name="appwidget_cfg_never">never</string>
    <string name="appwidget_cfg_30_min">30 minutes</string>
    <string name="appwidget_cfg_1_hour">1 hour</string>
    <string name="appwidget_cfg_daily">daily</string>
    <string name="appwidget_cfg_select_refresh_interval">Select Refresh Interval</string>
    <string name="appwidget_cfg_select_category">Select Category</string>
    <string name="appwidget_cfg_all">All</string>
    <string name="appwidget_cfg_err_acct">A google reader account is required to use the widget. Please configure one and try again.</string>
    <string name="appwidget_cfg_err_cat">An error occurred while retrieving categories. Please make sure you have an active data connection.</string>
    <string name="appwidget_err_no_articles">No articles available. Tap to refresh.</string>
    <string name="appwidget_err_download">Error downloading articles. Tap to retry.</string>
    <string name="appwidget_err_bad_account">Please login to the app first.</string>
    <string name="appwidget_err_account_access">Error accessing account. Tap to retry.</string>
    <string name="appwidget_title_unknown">[unknown]</string>
    <string name="appwidget_moments_ago">moments ago</string>
    <string name="appwidget_thousand_shares">%1$dK</string>
    <string name="appwidget_refreshing">Refreshing…</string>
    <string name="appwidget_share">Try %1$s %2$s</string>
    <string name="appwidget_promo_rate">Help us become a five star widget!</string>
    <string name="appwidget_promo_share">If you like this widget, share it with your friends!</string>
    <string name="appwidget_promo_find_more">Enjoying this widget? Find widgets for more sites!</string>
    <string name="appwidget_promo_try_feedly">Enjoying the feedly widget? Try the feedly app!</string>
    <string name="appwidget_promo_btn_rate">Rate widget</string>
    <string name="appwidget_promo_btn_share">Share widget</string>
    <string name="appwidget_promo_btn_find_more">Find widgets</string>
    <string name="appwidget_promo_btn_try_feedly">Try feedly</string>
    <string name="appwidget_promo_rate_short">Tap here to help us become a five star widget!</string>
    <string name="appwidget_promo_share_short">Tap here to share this widget!</string>
    <string name="appwidget_promo_find_more_short">Tap here to find widgets for more sites!</string>
    <string name="appwidget_promo_try_feedly_short">Tap here to try the feedly app!</string>
    <string name="appwidget_shares_color">\#00aeef</string>
    <string name="appwidget_author_override" />
    <string name="appwidget_author_lowercase">false</string>
    <string name="appwidget_title_hide">false</string>
    <string name="appwidget_bg_hide_colors" />
    <string name="pref.section.browsing">Browsing</string>
    <string name="pref.section.gestures">In article gestures</string>
    <string name="pref.section.lookAndFeel">Look and Feel</string>
    <string name="pref.section.pocket">Pocket</string>
    <string name="pref.section.instapaper">Instapaper</string>
    <string name="pref.section.bitly">Bit.ly</string>
    <string name="pref.section.email">Email</string>
    <string name="pref.section.labs">Labs</string>
    <string name="pref.section.sharing">Sharing</string>
    <string name="pref.section.readingExperience">Reading Experience</string>
    <string name="pref.start">Start Page</string>
    <string name="pref.favorite.saving.tool">Favorite Saving Tool</string>
    <string name="pref.favorite.sharing.tool">Favorite Sharing Tool</string>
    <string name="pref.navigation">Transition</string>
    <string name="pref.double.tap.to.close">Double Tap to Close</string>
    <string name="pref.long.to.save">Long Press to Save</string>
    <string name="pref.pull.to.close">Pull to Close</string>
    <string name="pref.mail.cc">Mail CC</string>
    <string name="pref.mail.bcc">Mail BCC</string>
    <string name="pref.twitter.quip">Twitter Postfix</string>
    <string name="pref.text.size">Text Size</string>
    <string name="pref.theme">Theme</string>
    <string name="pref.font.family">Article Font</string>
    <string name="pref.font.size">Article Font Size</string>
    <string name="pref.view.default">Default View</string>
    <string name="pref.user">User</string>
    <string name="pref.email">Email</string>
    <string name="pref.section">Section</string>
    <string name="pref.password">Password</string>
    <string name="pref.api.key">API Key</string>
    <string name="pref.autoreload">Refresh on Start</string>
    <string name="pref.automark.as.read">Auto Mark as Read</string>
    <string name="pref.auto.preview">Auto Preview</string>
    <string name="pref.auto.format">Auto Format</string>
    <string name="pref.confirm.mark.all">Mark All As Read</string>
    <string name="pref.article.navbar">Article Navbar</string>
    <string name="pref.article.close">Article close gesture</string>
    <string name="pref.article.swipe">Article to Article swipe</string>
    <string name="pref.volume.navigate">Volume Up/Down Navigation</string>
    <string name="pref.open.browser.directly">Open Browser Directly</string>
    <string name="pref.essentials">Language</string>
    <string name="pref.sharing.tag">Tag Line</string>
    <string name="pref.sharing.template">Template</string>
    <string name="pref.sharing.twitter.method">Twitter</string>
    <string name="pref.tap.edge.next.prev">Edge to Next/Prev</string>
    <string name="summary.favorite.saving.tool">Add a shortcut to save in one tap</string>
    <string name="summary.favorite.sharing.tool">Add a shortcut to share in one tap</string>
    <string name="summary.double.tap.to.close">Double tap to close article.</string>
    <string name="summary.open.browser.directly">Open URLs in external browser.</string>
    <string name="summary.article.swipe">Alter full article display swipe gestures.</string>
    <string name="action_mail">Mail Article</string>
    <string name="action_tweet">Tweet</string>
    <string name="action_copy_url">Copy Article Link</string>
    <string name="action_open_in_browser">Open in Browser</string>
    <string name="action_mobilize">Mobilize</string>
</resources>